# Trading_Agent

./: .gitignore  CHANGES.md  architecture.md  config.py  main.py  order.md  pyproject.toml  requirements.txt  setup.sh  test.py  test_run.py
agents/: analyst.py  execution.py  market_data.py  monitor.py  risk.py  supervisor.py
graph/: graph.py  state.py
memory/: checkpointer.py  trade_log.py  trades.db-shm  trades.db-wal
notifications/: alert.py  report.py
prompts/: analyst_prompt.py  risk_prompt.py  supervisor_prompt.py
tools/: exchange.py  indicators.py  risk_calc.py  whale_data.py
