[project]
name = "trading-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "khoa",email = "caokhoa@gmail.com"}
]
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain (>=1.3.13,<2.0.0)",
    "langchain-openai (>=1.3.5,<2.0.0)",
    "langchain-core (>=1.4.9,<2.0.0)",
    "langgraph (>=1.2.9,<2.0.0)",
    "langgraph-checkpoint-sqlite (>=3.1.0,<4.0.0)",
    "ccxt (>=4.5.64,<5.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.5.1,<3.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "apscheduler (>=3.11.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ta (>=0.11.0,<0.12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
