[project]
name = "trading-agent"
version = "0.1.0"
description = ""
authors = [
    { name = "khoa", email = "caokhoa@gmail.com" }
]
requires-python = ">=3.12,<4.0.0"

dependencies = [
    "langchain>=1.3.13,<2.0.0",
    "langchain-openai>=1.3.5,<2.0.0",
    "langgraph>=1.2.9,<2.0.0",
    "langgraph-checkpoint-sqlite>=3.1.0,<4.0.0",

    "ccxt>=4.5.64,<5.0.0",

    "pandas>=2.3.2,<3.0.0",
    "numpy>=2.2.6,<3.0.0",
    "ta>=0.11.0,<0.12.0",

    "requests>=2.32.3,<3.0.0",
    "apscheduler>=3.11.0,<4.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
]